# TTGO_OTA

./: .cproject  .gitignore  .project  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/MK_I2C/: CMakeLists.txt  mk_i2c.c  mk_i2c.h
components/MK_TOOLS/: CMakeLists.txt  mk_tools.c  mk_tools.h
components/MK_WIFI/: CMakeLists.txt  mk_wifi.c  mk_wifi.h
components/tools/: CMakeLists.txt  decode_png.c  fontx.c  lcd_tests.c  pngle.c  st7789.c  tools.c
components/tools/include/: lcd_tests.h  st7789.h  tools.h
main/: CMakeLists.txt  main.c  mk_fota_https.c  mk_fota_https.h
